[gd_scene load_steps=2 format=3 uid="uid://dancer_mask_ui"]

[ext_resource type="Script" path="res://Script/dancer_mask_ui.gd" id="1_ui_script"]

[node name="DancerMaskUI" type="Control"]
script = ExtResource("1_ui_script")
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="TrackLine" type="Line2D" parent="."]
position = Vector2(500, 450)
width = 3.0
default_color = Color(1, 1, 1, 1)
points = PackedVector2Array(0, 0, 600, 0)

[node name="BeatNodes" type="Node2D" parent="."]
position = Vector2(500, 450)

[node name="Indicator" type="ColorRect" parent="."]
offset_left = 498.0
offset_top = 420.0
offset_right = 502.0
offset_bottom = 480.0
color = Color(1, 0, 0, 1)
mouse_filter = 2

[node name="InstructionLabel" type="Label" parent="."]
offset_left = 0.0
offset_right = 1600.0
offset_top = 300.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "按空格键开始，经过节奏点时按空格键判定"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 0.0
offset_right = 1600.0
offset_top = 550.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "舞姿正确: 0/4"
horizontal_alignment = 1

